--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "react": "^19.2.3",
     "react-bootstrap": "^2.10.10",
